# WAD

./: .gitignore  .tags  .tags_sorted_by_file  CMakeCache.txt  CMakeLists.txt  LICENSE  MetabolicCostData.mat  README.md  analysisanalysis.txt  build.sh  compile_commands.json  install.sh  torsoMuscle
analysis/: analysis.txt
cmake/: FindBoost.cmake
core/: AnalysisData.cpp  AnalysisData.h  BVH.cpp  BVH.h  CMakeLists.txt  Character.cpp  Character.h  Contact.cpp  Contact.h  DARTHelper.cpp  DARTHelper.h  Device.cpp  Device.h  Environment.cpp  Environment.h  JointData.cpp  JointData.h  JointTorque.cpp  JointTorque.h  MetabolicEnergy.cpp  MetabolicEnergy.h  Muscle.cpp  Muscle.h  Utils.cpp  Utils.h
data/: adaptive.txt  device.xml  device2.xml  ground.xml  human.xml  human2.xml  human2_.xml  human3.xml  humanJN.xml  human_.xml  human_lower.xml  human_tmp.xml  human_torso.xml  human_torso1.xml  humanoid.xml  humanoid2.xml  humanoid3.xml  metadata.txt  metadata_device.txt  metadata_walk.txt  metadata_walk_device.txt  muscle284.xml  muscleJN.xml
data/motion/: walk.bvh  walk2.bvh
libs/: CMakeLists.txt
python/: CMakeCache.txt  CMakeLists.txt  EnvManager.cpp  EnvManager.h  Femur_related_muscle  GaitAnalysis.py  Makefile  Model.py  NumPyHelper.cpp  NumPyHelper.h  RunningMeanStd.py  analysis.txt  analysis2_e1.txt  analysis2_force.txt  analysis2_rep.txt  analysis_normal_jn.txt  cmake_install.cmake  main.py  main_device.py  main_device_both.py  main_mpi.py  marginal_plot.py  mcmc.py  measure.py
python/core/: Makefile  cmake_install.cmake
python/python/: Makefile  cmake_install.cmake
python/render/: Makefile  cmake_install.cmake
render/: CMakeLists.txt  CMakeLists_tmp.txt  DrawUtils.h  GLFWApp.cpp  GLFWApp.h  GLFunctions.cpp  GLFunctions.h  MyEventHandler.cpp  MyEventHandler.h  MyMain.cpp  MyWidget.cpp  MyWidget.h  MyWorldNode.cpp  MyWorldNode.h  ShapeRenderer.cpp  ShapeRenderer.h  ShapeRenderer_imgui.cpp  ShapeRenderer_imgui.h  Window.cpp  Window.h  main.cpp  main2.cpp  main_imgui.cpp
